# algo-hands-on-agent

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  EVALUATION_GUIDE.md  HELP.md  LICENSE  MUDANCAS_PROGRESSO.md  README.md  TRILHA-AHO.md  debug_db.py  debug_turns.py  pyproject.toml
scripts/: bootstrap.sh
skills/aho-algorithm-representation/: SKILL.md
skills/aho-algorithm-representation/references/: problem-generation.md
skills/aho-algorithms-data-structures/: SKILL.md
skills/aho-algorithms-data-structures/references/: algorithm-families.md
skills/aho-computational-thinking/: SKILL.md
skills/aho-computational-thinking/references/: problem-generation.md
skills/aho-curriculum-path/: SKILL.md
skills/aho-guided-lessons/: SKILL.md
skills/aho-portfolio-projects/: SKILL.md
skills/aho-python-foundations/: SKILL.md
skills/aho-stage-router/: SKILL.md
skills/aho-start-here/: SKILL.md
skills/aho-tutor-core/: SKILL.md
src/algo_hands_on/: __init__.py  agent_factory.py  api.py  chat_core.py  cli.py  config.py  curriculum.py  hooks.py  schemas.py  tui.py
src/algo_hands_on/db/: __init__.py  schema.sql  (+3 more)
src/algo_hands_on_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py  test_agent_factory.py  test_config.py  test_core.py  test_curriculum.py  test_duplicate_detection.py  test_evaluation_extraction.py  test_hooks.py  test_integration_evaluation.py  test_interfaces.py  test_persistence.py  test_repository.py  test_schemas.py  test_sessions.py  test_skills.py  test_tutoring_service.py
(+7 files in other folders)
