[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "algo-hands-on-agent"
version = "0.1.0"
description = "Tutor adaptativo de pensamento computacional, lógica, algoritmos e Python com Agno e DeepSeek."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Fernando de Oliveira" }]
dependencies = [
  "agno>=2.6,<3.0",
  "openai>=1.100,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.34,<1.0",
  "typer>=0.15,<1.0",
  "rich>=13.9,<15.0",
  "textual>=8.0,<9.0",
  "pydantic>=2.10,<3.0",
  "pydantic-settings>=2.7,<3.0",
  "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-cov>=6.0,<7.0",
  "ruff>=0.9,<1.0",
]

[project.scripts]
aho = "algo_hands_on.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
algo_hands_on = ["py.typed", "db/schema.sql"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
